--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <main class="linearWrapper" >
         <section class="whiteWrapper" >
-            <h1>Totdat je echt mijn meisje bent💕</h1>
+            <h1>Jij bent mijn meisje!💕</h1>
                 <!-- Display the countdown timer in an element -->
-            <div id="demo" class="countdown" ></div>
             <div class="horizontalLine" ></div>
             <div class="textContent" >
                 <h2>Lieve schat</h2>
